# SimpleNeftyRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: program.h  program_global.hpp  simple_obj_reader.hpp
src/: main.cpp  obj_file.cpp  program.cpp
